<resources>
    <string name="app_name">Wobble!</string>
    <string name="score">Score </string>
    <string name="play">PLAY</string>
    <string name="restart">Restart</string>
    <string name="pause">Pause</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">Extreme</string>
    <string name="highscore">Highscore</string>
    <string name="game_over">GAME OVER</string>
    <string name="difficulty">Difficulty</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="retry">RETRY</string>
    <string name="menu">MENU</string>
    <string name="new_highscore">NEW HIGHSCORE</string>
    <string name="copyright">© Maciej Szulc</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="vibration">Vibration</string>
    <string name="how_to_play_content">Tilt, move, or wobble your device to move the red dot.   Touch yellow dot with red dot to get points and additional time.   At the start you have 10 seconds and every hit adds 0.3s to the remaining time.</string>
</resources>
